# ponk-protocol

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  release.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: receive_reassemble.rs  roundtrip.rs  send_multicast.rs
src/: assembly.rs  codec.rs  error.rs  lib.rs  model.rs
tests/: interoperability.rs
